--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,6 +19,10 @@
       <mat-hint>Introduzca la api-key para la comunicación con el servicio REST</mat-hint>
     </mat-form-field>
 
+    <mat-form-field style="margin-left: 20px;width: 420px !important;">
+      <input matInput type="text" [(ngModel)]="prueba"  >
+    </mat-form-field>
+
     <app-messages style="margin-top: 20px;"></app-messages>
 
   </div>
