- Todos los bloques: revisada la responsive para que en moviles pueda visualizarse mejor

--- a/src/app/genera-barras/genera-barras.component.html
+++ b/src/app/genera-barras/genera-barras.component.html
@@ -19,7 +19,9 @@
       </mat-form-field>
 
     </div>
+  </div>
 
+  <div class="grid-layout">
     <div class="caja c1">
       <mat-card appearance="outlined">
         <mat-card-header>QR</mat-card-header>
@@ -140,7 +142,9 @@
         </mat-card-content>
       </mat-card>
     </div>
+  </div>
 
+  <div class="grid-layout">
     <div class="caja c4">
       <mat-card appearance="outlined">
         <mat-card-header>Code 128</mat-card-header>
