--- a/src/app/genera-coches/genera-coches.component.html
+++ b/src/app/genera-coches/genera-coches.component.html
@@ -10,7 +10,9 @@
         <input matInput id="numGenera" type="number"  min="2" max="1000" placeholder="Número de generaciones" [(ngModel)]="numGenerar">
       </mat-form-field>
     </div>
+  </div>
 
+  <div class="grid-layout">
     <div class="caja c1">
       <mat-card appearance="outlined" class="caja-fondo-coche">
         <mat-card-header>Generar Vehículo</mat-card-header>
@@ -26,7 +28,7 @@
           </mat-form-field>
           -->
           <form>
-            <mat-form-field style="width: 330px;margin-left: 5px;">
+            <mat-form-field style="width: 280px;margin-left: 5px;">
               <mat-label>Seleccionar tipo generación</mat-label>
               <input #selectedTipoGeneraIn matInput type="text"
                 placeholder="Seleccionar ..."
