--- a/src/app/genera-colores/genera-colores.component.html
+++ b/src/app/genera-colores/genera-colores.component.html
@@ -61,7 +61,9 @@
         </mat-card-content>
       </mat-card>
     </div>
+  </div>
 
+  <div class="grid-layout">
     <div class="caja c2">
       <mat-card appearance="outlined">
         <mat-card-header>Generar Color</mat-card-header>
@@ -101,7 +103,9 @@
       </mat-card>
     </div>
 
+  </div>
 
+  <div class="grid-layout">
 
 
     <div class="caja c3">
@@ -260,7 +264,9 @@
       </mat-card>
     </div>
 
+  </div>
 
+  <div class="grid-layout">
 
     <div class="caja c7">
       <mat-card appearance="outlined">
@@ -274,7 +280,7 @@
               <div>
                 <label>Matíz</label>
               </div>
-              <mat-slider style="width: 300px;" min="-1" max="+1" step="0.01" showTickMarks discrete>
+              <mat-slider style="width: 200px;" min="-1" max="+1" step="0.01" showTickMarks discrete>
                 <input matSliderThumb [(ngModel)]="matizColorCantidad">
               </mat-slider>
             </div>
@@ -283,7 +289,7 @@
               <div>
                 <label>Saturación</label>
               </div>
-              <mat-slider style="width: 300px;" min="-1" max="+1" step="0.01" showTickMarks discrete>
+              <mat-slider style="width: 200px;" min="-1" max="+1" step="0.01" showTickMarks discrete>
                 <input matSliderThumb [(ngModel)]="saturaColorCantidad">
               </mat-slider>
             </div>
@@ -292,7 +298,7 @@
               <div>
                 <label>Brillo</label>
               </div>
-              <mat-slider style="width: 300px;" min="0" max="100" step="1" showTickMarks discrete>
+              <mat-slider style="width: 200px;" min="0" max="100" step="1" showTickMarks discrete>
                 <input matSliderThumb [(ngModel)]="brilloColorCantidad">
               </mat-slider>
             </div>
@@ -327,7 +333,9 @@
         </mat-card-content>
       </mat-card>
     </div>
+  </div>
 
+  <div class="grid-layout">
     <div class="caja c8">
       <mat-card appearance="outlined">
         <mat-card-header>Invertir color</mat-card-header>
@@ -415,7 +423,7 @@
           <div>
             <label>% intervención color 2</label>
           </div>
-          <mat-slider style="width: 300px;" min="0" max="100" step="1" showTickMarks discrete>
+          <mat-slider style="width: 200px;" min="0" max="100" step="1" showTickMarks discrete>
             <input matSliderThumb [(ngModel)]="mezclaColorCantidad">
           </mat-slider>
 
@@ -447,7 +455,9 @@
         </mat-card-content>
       </mat-card>
     </div>
+  </div>
 
+  <div class="grid-layout">
     <div class="caja c11">
       <mat-card appearance="outlined">
         <mat-card-header>Gradiente colores</mat-card-header>
@@ -459,7 +469,7 @@
           <div>
             <label>Num. gradientes a generar</label>
           </div>
-          <mat-slider style="width: 500px;" min="1" max="500" step="1" showTickMarks discrete>
+          <mat-slider style="width: 80%;" min="1" max="500" step="1" showTickMarks discrete>
             <input matSliderThumb [(ngModel)]="gradienteCantidad">
           </mat-slider>
 
@@ -511,7 +521,9 @@
         </mat-card-content>
       </mat-card>
     </div>
+  </div>
 
+  <div class="grid-layout">
     <div class="caja c12">
       <mat-card appearance="outlined">
         <mat-card-header>Colores monocromáticos</mat-card-header>
@@ -522,7 +534,7 @@
           <div>
             <label>Num. colores</label>
           </div>
-          <mat-slider style="width: 500px;" min="1" max="500" step="1" showTickMarks discrete>
+          <mat-slider style="width: 80%;" min="1" max="500" step="1" showTickMarks discrete>
             <input matSliderThumb [(ngModel)]="monocromaticoCantidad">
           </mat-slider>
 
