--- a/src/app/genera-numeros/genera-numeros.component.scss
+++ b/src/app/genera-numeros/genera-numeros.component.scss
@@ -16,8 +16,10 @@
 
 .grid-layout{
   display: grid;
-  grid-template-columns: auto auto;
-  gap: 5px;
+  //grid-template-columns: auto auto;
+  grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+  gap: 10px;
+  margin-bottom: 10px;
 }
 
 
@@ -28,21 +30,21 @@
 }
 
 
-.c0{
-  grid-column: 1 / span 2;
-}
+// .c0{
+//   grid-column: 1 / span 2;
+// }
 
-.c1{
-  grid-column: 1 / span 2;
-}
+// .c1{
+//   grid-column: 1 / span 2;
+// }
 
-.c4{
-  grid-column: 1 / span 2;
-}
+// .c4{
+//   grid-column: 1 / span 2;
+// }
 
-.c7{
-  grid-column: 1 / span 2;
-}
+// .c7{
+//   grid-column: 1 / span 2;
+// }
 
 
 
