--- a/src/app/genera-textos/genera-textos.component.scss
+++ b/src/app/genera-textos/genera-textos.component.scss
@@ -1,7 +1,9 @@
 .grid-layout{
   display: grid;
-  grid-template-columns: auto auto;
-  gap: 5px;
+  //grid-template-columns: auto auto;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 10px;
+  margin-bottom: 10px;
 }
 
 
@@ -11,15 +13,15 @@
   //margin: 5px;
 }
 
-.c0{
-  grid-column: 1 / span 2;
-}
+// .c0{
+//   grid-column: 1 / span 2;
+// }
 
 
-.c5{
-  grid-column: 1 / span 2;
-}
+// .c5{
+//   grid-column: 1 / span 2;
+// }
 
-.c6{
-  grid-column: 1 / span 2;
-}
+// .c6{
+//   grid-column: 1 / span 2;
+// }
