- Boton: comprame un cafe. Menu, about, principal.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,10 @@
 <div class="seccionCentrada tracking-in-expand">
   <h1 class="tracking-in-expand">Generadores de jpromocion</h1>
 
-  <h3 class="tracking-in-expand">FrontEnd Angular</h3>
+
+  <app-comprame-cafe></app-comprame-cafe>
+
+  <h3 class="tracking-in-expand" style="margin-top: 10px;">FrontEnd Angular</h3>
   <div>
     <p>Versión v.{{ versionApp }}</p>
   </div>
