--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,6 +21,8 @@
 
     <input type="hidden" [(ngModel)]="mostrarApiUrlPorAsegurar"  >
 
+    <app-comprame-cafe style="margin-top: 40px;"></app-comprame-cafe>
+
 
     <app-messages style="margin-top: 20px;"></app-messages>
 
