--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -27,6 +27,9 @@
         </div>
       </a>
       }
+      <div style="width: 95%; margin-top: 20px;">
+        <app-comprame-cafe ></app-comprame-cafe>
+      </div>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content >
